# cursor_cmake

./: CMakeLists.txt  CMake语法用法总结.md
include/: add.h
src/: main.cpp
